<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TenthActivity"
    tools:layout_editor_absoluteY="81dp">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_media_play" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/pauseButon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="102dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_media_pause" />

    <TextView
        android:id="@+id/textViewSecond"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="48dp"
        android:text="@string/track"
        android:textColor="@android:color/background_dark"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

    <RadioGroup
        android:id="@+id/radioGroupSecond"
        android:layout_width="284dp"
        android:layout_height="228dp"
        android:layout_marginStart="16dp"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/immlivelife" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/itsmylife" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dontyou" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/liveyourlife" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="66dp"
        android:layout_height="22dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="22dp"
        android:text="Round 8"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroupSecond" />
</android.support.constraint.ConstraintLayout>